# rust-utils

./: Cargo.toml  LICENSE  README.md
examples/hex-writer/: Hello.txt  wrap-stdout.rs
hex-writer/: Cargo.toml
hex-writer/src/: lib.rs
