[package]
name = "rust-utils"
version = "0.1.0"
authors = ["nbsdx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "hex-writer"
]

[[example]]
name = "hex-writer-stdout"
path = "examples/hex-writer/wrap-stdout.rs"

[dependencies]

[dev-dependencies]
hex-writer = { version = "*", path = "hex-writer" }